--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ P {
 
 section {
     display: flex;
+    margin-bottom: 150px;
 }
 
 .width {
@@ -41,4 +42,10 @@ section {
 .top {
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
+}
+
+.second {
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
